# eflips-depot

./: .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  README.md  Versuchsdatei.ipynb  example_scenario.ipynb  manage.py  preprocess_scenarios.py  pyproject.toml  requirements 3.txt  testdatei-jonas.py
.github/workflows/: black.yml  check-documentation-build.yml  check-documentation-version.yml  poetry-check.yml  postgres_eflips_depot.yml  pypi-version-check.yml  release.yml  unittests.yml
bus_depot/: STARTSIM_busdepot.py  show_result.py  user_example.py
bus_depot/eflips_settings/: Anmerkungen.json  kls_diss_settings_210202_AB.json  kls_diss_settings_210202_SB.json  kls_diss_settings_210219.json
bus_depot/electricity_prices/: __init__.py  price_plot.py
bus_depot/electricity_prices/spot_day_ahead/: 2018-10-01.p  2018-10-02.p  2018-10-03.p  2018-10-04.p  2018-10-05.p  2018-10-06.p  2018-10-07.p  2018-10-08.p  2018-10-09.p  2018-10-10.p  2018-10-11.p  2018-10-12.p  2018-10-13.p  2018-10-14.p  2018-10-15.p  2018-10-16.p  2018-10-17.p  2018-10-18.p  2018-10-19.p  2018-10-20.p  2018-10-21.p  2018-10-22.p  2018-10-23.p  2018-10-24.p  2018-10-25.p  2018-10-26.p  2018-10-27.p  2018-10-29.p  2018-10-30.p  2018-10-31.p  2018-11-01.p  2018-11-02.p  2018-11-03.p  2018-11-04.p  2018-11-05.p  2018-11-06.p  2018-11-07.p  2018-11-08.p  2018-11-09.p  2018-11-10.p  (+295 more)
bus_depot/electricity_prices/spot_intraday/: 2018-10-01.p  2018-10-02.p  2018-10-03.p  2018-10-04.p  2018-10-05.p  2018-10-06.p  2018-10-07.p  2018-10-08.p  2018-10-09.p  2018-10-10.p  2018-10-11.p  2018-10-12.p  2018-10-13.p  2018-10-14.p  2018-10-15.p  2018-10-16.p  (+318 more)
bus_depot/opt_settings/: diss_kls.json
bus_depot/results/: diss_kls_6xS, 94x150kW_SB, 147x75kW_AB, shunting+precond+chargeequationsteps_export_2021-08-17_11-30-53.xlsx  occupancy_rate.xlsx  output_to_simba.json
bus_depot/schedules/: format_schedule_eflips_to_excel.py  schedule_kls_diss_scenario1_AB_OC_210203.xls  schedule_kls_diss_scenario1_AB_OC_210203.xlsx  schedule_kls_diss_scenario1_SB_DC_210203.xls  schedule_kls_diss_scenario1_SB_DC_210203.xlsx  schedule_kls_diss_scenario1_SB_DC_AB_OC_210203.xls  schedule_kls_diss_scenario1_SB_DC_AB_OC_210203.xlsx
bus_depot/templates/: __init__.py  template_creation.py
defaults/: default_settings.json
docs/: conf.py  development.rst  index.rst  requirements.txt  usage.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/source/: conf.py  usage.rst
eflips/: __init__.py  evaluation.py  helperFunctions.py  misc.py  settings.py  simpy_ext.py
eflips/api/: basic.py  output.py
eflips/depot/: __init__.py  configuration.py  depot.py  evaluation.py  filters.py  input_epex_power_price.py  plots.py  processes.py  rating.py  resources.py  settings_config.py  simple_vehicle.py  simulation.py  smart_charging.py  standalone.py  validation.py
eflips/settings_files/: default.json  exampledata.json
tests/: djangosettings.py  test_accessing_simba_models.py  test_api.py  test_django.py  test_eflips_whole_stack.py  test_evaluation.py  test_shuyaos_development.py
tests/api/: djangosettings.py  sample_input.csv  sample_input_small_capacity.csv  test_api.py  test_api_depot.py  test_api_django_simba.py  test_api_django_simba_output.py  test_api_input.py  test_api_private.py
tests/database/: test_init_from_db.py  test_integrating_eflips_db.py
tests/sample_simBA_input/: default_level_of_loading_over_day.csv
tests/sample_simulation/: sample_depot.json  schedule.xlsx  settings.json
tests/smart_charging/: base.py  test_smart_charging.py
(+221 files in other folders)
