[tool.poetry]
name = "eflips-depot"
version = "1.0.0-alpha1"
description = "Depot Simulation for eFLIPS"
authors = ["Enrico Lauth <enrico.lauth@tu-berlin.de>",
    "Ludger Heide <ludger.heide@tu-berlin.de",
    "Shuyao Guo <shuyao.guo@tu-berlin.de"]
license = "AGPLv3"
readme = "README.md"
packages = [{ include = "eflips/depot" }]

[tool.poetry.dependencies]
python = "^3.11"
simpy = "^4.0.1"
eflips = { git = "https://github.com/mpm-tu-berlin/eflips.git", rev = "eflips-depot-compatibility" }
eflips-model = "^1.1.5"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-pycharm = "^0.7.0"
sphinx = "^6.2.1"
sphinx-autoapi = "^3.0.0"
black = "^23.7.0"
django-environ = "^0.11.2"
pre-commit = "^3.4.0"
coverage = "^7.3.2"
xlsxwriter = "^3.1.9"
pandas = "^2.1.4"
xlrd = "<=1.2.0"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
