[tool.poetry]
name = "eflips-depot"
version = "4.12.0"
description = "Depot Simulation for eFLIPS"
authors = ["Enrico Lauth <enrico.lauth@tu-berlin.de>",
    "Ludger Heide <ludger.heide@tu-berlin.de",
    "Shuyao Guo <shuyao.guo@tu-berlin.de"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/mpm-tu-berlin/eflips-depot"
repository = "https://github.com/mpm-tu-berlin/eflips-depot"
packages = [{ include = "eflips/depot" }]

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
simpy = "^4.0.1"
tqdm = "^4.67.0"

# Legacy dependencies, which are still needed until we refactor the code
eflips = "^0.1.3"
xlsxwriter = "^3.1.9"
pandas = "^2.2.0"
xlrd = "<=1.2.0"
scipy = "^1.14.0"
eflips-model = ">8.1.0, <10.0.0"
eflips-opt = "^0.3.3"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pydocstringformatter]
write = true
max-line-length = 100
exclude = ["eflips/depot/*", "eflips/depot/layout_opt/**", "tests/**"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-pycharm = "^0.7.0"
sphinx = "^6.2.1"
sphinx-autoapi = "^3.0.0"
black = "^23.7.0"
django-environ = "^0.11.2"
pre-commit = "^3.4.0"
coverage = "^7.3.2"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
